--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "firebase": "^12.2.1",
     "latest": "^0.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
